--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle">We Are Product Designer From UK</p>
+            <p class="hero-subtitle">We are UK product designers.</p>
 
-            <h2 class="h2 hero-title">We Design Interfaces That Users Love</h2>
+            <h2 class="h2 hero-title">
+              We create interfaces that users enjoy.</h2>
 
             <p class="hero-text">
-              Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit fringilla ac
-              at purus.
+             
+As UK product designers, we specialize in creating intuitive and enjoyable interfaces. By blending functionality with aesthetic appeal, we ensure that every user interaction is both seamless and engaging.
             </p>
 
             <button class="btn">Learn More</button>
