--- a/index.html
+++ b/index.html
@@ -154,16 +154,11 @@ As UK product designers, we specialize in creating intuitive and enjoyable inter
             <h2 class="h2 section-title underline">Why Our Agency</h2>
 
             <p class="about-text">
-              In dictum aliquam turpis lacinia iaculis. Fusce vel malesuada magna. Nulla vel maximus risus. Donec
-              volutpat metus
-              lacinia risus accumsan, ac bibendum libero efficitur. Pellentesque nec nisi sit amet magna tempus
-              hendrerit ut a odio.
+              As UK product designers, our agency excels in crafting intuitive and enjoyable user interfaces that captivate and engage. Our unique blend of functionality and aesthetic appeal ensures that every interaction is seamless, fostering a deeper connection between users and products. 
             </p>
 
             <p class="about-text">
-              Praesent rhoncus commodo tortor, id pulvinar nisl blandit at. Nulla facilisi. Quisque turpis ante,
-              vehicula condimentum
-              arcu.
+              We pride ourselves on our ability to understand and anticipate user needs, delivering tailored solutions that not only meet but exceed expectations. By choosing our agency, you are partnering with a team dedicated to elevating user experiences and driving innovation in design, ensuring your product stands out in a competitive market.
             </p>
 
             <ul class="stats-list">
